--- a/cordova/hello/package.json
+++ b/cordova/hello/package.json
@@ -15,14 +15,16 @@
   "dependencies": {
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
-    "cordova-ios": "^5.0.1"
+    "cordova-ios": "^5.0.1",
+    "cordova-plugin-bluetoothle": "^4.5.5"
   },
   "devDependencies": {
     "cordova-plugin-whitelist": "^1.3.4"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-bluetoothle": {}
     },
     "platforms": [
       "browser",
