--- a/cordova/hello/package.json
+++ b/cordova/hello/package.json
@@ -16,7 +16,8 @@
     "cordova-android": "^8.1.0",
     "cordova-browser": "^6.0.0",
     "cordova-ios": "^5.0.1",
-    "cordova-plugin-bluetoothle": "^4.5.5"
+    "cordova-plugin-bluetoothle": "^4.5.5",
+    "cordova-plugin-device": "^2.0.3"
   },
   "devDependencies": {
     "cordova-plugin-whitelist": "^1.3.4"
@@ -24,7 +25,8 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "cordova-plugin-bluetoothle": {}
+      "cordova-plugin-bluetoothle": {},
+      "cordova-plugin-device": {}
     },
     "platforms": [
       "browser",
